--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
     "lite-server": "^2.5.3",
     "mongoose": "^5.9.7",
     "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.5"
   }
 }
